--- a/4. FormProgressBar/style.css
+++ b/4. FormProgressBar/style.css
@@ -54,7 +54,8 @@ h1 {
 	width: 600px;
 }
 
-.progress-box::before, .progress-bar {
+.progress-box::before,
+.progress-bar {
 	position: absolute;
 	top: 50%;
 	transform: translateY(-50%);
@@ -68,7 +69,7 @@ h1 {
 	content: '';
 }
 
-.progress-bar{
+.progress-bar {
 	width: 0%;
 	background-color: royalblue;
 	transition: width .3s;
